--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-sm-6">
                   <div class="blog-item mb-45">
                     <div class="blog-img">
                       <img src="img/blog/blog_1.jpg" alt="">
@@ -869,7 +869,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-sm-6">
                   <div class="blog-item mb-45">
                     <div class="blog-img">
                       <img src="img/blog/blog_2.jpg" alt="">
@@ -883,7 +883,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-sm-6">
                   <div class="blog-item mb-45">
                     <div class="blog-img">
                       <img src="img/blog/blog_3.jpg" alt="">
@@ -897,7 +897,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-sm-6">
                   <div class="blog-item mb-45">
                     <div class="blog-img">
                       <img src="img/blog/blog_4.jpg" alt="">
@@ -911,7 +911,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-sm-6">
                   <div class="blog-item mb-45">
                     <div class="blog-img">
                       <img src="img/blog/blog_5.jpg" alt="">
@@ -925,7 +925,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-sm-6">
                   <div class="blog-item mb-45">
                     <div class="blog-img">
                       <img src="img/blog/blog_6.jpg" alt="">
